# WindowsConsoleExtention

./: CMakeLists.txt
CpeLib/: CMakeLists.txt
CpeLib/_old/: Console.cpp  Console.h
CpeLib/cpe/: Core.h  Macros.h  Platform.h  macros.h
CpeLib/cpe/_platform/: winapi.h
CpeLib/cpe/core/: BaseInput.cpp  BaseInput.h  BaseOutput.cpp  BaseOutput.h  Color.cpp  Color.h  Console.cpp  Console.h  Encoder.cpp  Encoder.h  Encoding.cpp  Encoding.h  Exception.cpp  Exception.h  IModel.cpp  IModel.h  InputFormat.cpp  InputFormat.h  KeyData.cpp  KeyData.h  KeyType.h  OutputFormat.cpp  OutputFormat.h  Platform.cpp  Platform.h  Point.cpp  Point.h  ReaderFormat.cpp  ReaderFormat.h  Terminal.cpp  Terminal.h  WriterFormat.cpp  WriterFormat.h
CpeLib/cpe/core/except/: Exception.cpp  Exception.h
CpeLib/cpe/core/format/: LineReader.cpp  LineReader.h
CpeLib/cpe/core/io/: AReader.cpp  AReader.h  AWriter.cpp  AWriter.h
CpeLib/cpe/ui/: ABinding.h  ACommand.h  AContainer.cpp  AContainer.h  AController.cpp  AController.h  AElement.h  AProcessor.h  AProperties.h  AReader.cpp  AReader.h  AScript.h  AView.cpp  AView.h  BaseInput.cpp  BaseInput.h  BaseOutput.cpp  BaseOutput.h  BaseReader.cpp  BaseReader.h  Buffer.cpp  Buffer.h  BufferManip.cpp  BufferManip.h  ConsoleApp.cpp  ConsoleApp.h  ConsoleApplication.cpp  ConsoleApplication.h  IController.cpp  IController.h  IElement.cpp  IModel.cpp  IModel.h  IPrintElement.h  IProperties.h  IProperty.cpp  IProperty.h  IReader.cpp  IReader.h  IWriter.cpp  (+15 more)
CpeLib/cpe/ui/command/: Label.cpp  Label.h  Menu.cpp  Menu.h  Message.cpp  Message.h  MessageBox.h
CpeLib/cpe/ui/property/: AProperties.cpp  AProperties.h  AProperty.cpp  AProperty.h  IProperty.cpp  IProperty.h  Property.h
CpeLib/cpe/ui/reader/: AReader.h  LineReader.h
CpeLib/cpe/ui/style/: Border.cpp  Border.h  DualBorder.h  DualBorder.h.cpp  TextFormat.h  WriterFormat.cpp  WriterFormat.h
CpeLib/cpe/utils/: Convert.h  Text.cpp  Text.h
CpeLib/src/cpe/: macros.h
CpeLib/src/cpe/_platform/: winapi.cpp  winapi.h
CpeLib/src/cpe/core/: Color.cpp  Color.h  Exception.cpp  Exception.h  ISerializable.cpp  ISerializable.h  Point.cpp  Point.h  ReaderFormat.cpp  terminal.cpp  terminal.h
CpeLib/src/cpe/third/: json.hpp
CpeLib/src/cpe/tool/: Convert.cpp  Convert.h  Encoder.h  Nullable.h  NullableException.h  text.h
CpeLib/src/cpe/ui/: AContainer.h  AProcessor.h  AProperties.cpp  AScript.h  BaseCuiElement.h  BaseElement.h  BaseElementData.cpp  BaseElementData.h  BaseReader.h  BaseReaderData.cpp  BaseReaderData.h  BaseScript.cpp  BaseScript.h  BaseView.h  BaseViewModel.cpp  BaseViewModel.h  BaseWriter.h  BaseWriterData.cpp  BaseWriterData.h  Buffer.cpp  Buffer.h  BufferManip.cpp  BufferManip.h  BufferOld.cpp  BufferOld.h  ConsoleApplication.cpp  ConsoleApplication.h  ControllerAbstract.cpp  ControllerAbstract.h  ControllerInterface.h  ElementBase.cpp  ElementBase.h  IController.h  ICuiElement.h  IData.h  IElement.h  IElementData.h  IElementInitializer.h  IInitializer.h  IModel.h  (+26 more)
CpeLib/src/cpe/utils/: Convert.cpp  Property.h  Text.cpp  Text.h  text.cpp
CpeLib/src/platform/: platform.h  winapi.h
CpeLib/uml/: Mvc.puml
Task20/: CMakeLists.txt
Task20/src/TransAgency/: TransAgency.cpp  TransAgency.h  common.cpp  common.h  main.cpp
Task20/src/TransAgency/model/: Car.cpp  Car.h  TransAgency.cpp  TransAgency.h  TransAgencyData.cpp  TransAgencyData.h
Task20/src/TransAgency/view/: CarListView.cpp  CarListView.h  MainView.cpp  MainView.h
Task20/src/TransAgency/vm/: CarListVM.cpp  CarListVM.h  MainVM.cpp  MainVM.h
Task8/: CMakeLists.txt
Task8/src/AccountingPcSoft/: Item.h  System.cpp
cpe/: CMakeLists.txt  CPE.h  Console.cpp  Console.h  Enums.h  Menu.cpp  Menu.h  StringText.cpp  StringText.h  Table.cpp  Table.h  tools.cpp  tools.h
cpe/_old/: Console.cpp
cpe/core/: Color.h  Console.cpp  Console.h  Encoder.cpp  Encoder.h  Encoding.cpp  Encoding.h
cpe/ui/: IElement.h  IElementUi.h  Menu.cpp  Menu.h  Table.cpp  Table.h  TextBlock.cpp
cpe/ui/style/: Border.cpp  Border.h  BorderChar.h  DualBorder.h  Style.cpp  Style.h  TableBorder.h  TextFormat.cpp  TextFormat.h  TextStyle.cpp  TextStyle.h
cpe/utils/: Converter.cpp  Converter.h  Text.h  tools.cpp  tools.h
cpe/utils/text/: Text.cpp  Text.h  TextRect.cpp  TextRect.h
cw/: CMakeLists.txt  Readme.md
cw/Task20/: CMakeLists.txt
cw/Task20/src/: TransAgency.h  common.h  main.cpp
cw/Task20/src/model/: Car.cpp  Car.h
cw/Task20/src/scr/: CarListScript.cpp  CarListScript.h  MainScript.cpp  MainScript.h
cw/task20/: CMakeLists.txt
cw/task20/src/scr/: CarListScript.cpp  MainScript.h
cw/task8/: CMakeLists.txt
cw/task8/src/: Item.cpp  main.cpp
cw/task_08/: CMakeLists.txt  Readme.md
cw/task_08/src/: System.h
cw/task_20/: CMakeLists.txt  Readme.md
cw/task_20/src/: TransAgency.cpp  TransAgency.h  common.cpp  common.h  main.cpp
cw/task_20/src/model/: Car.h  Transport.cpp  Transport.h
cw/task_20/src/scr/: CarListScript.cpp  CarListScript.h  MainScript.cpp  MainScript.h  TransportListScript.cpp  TransportListScript.h
demo/: CMakeLists.txt
demo/src/: TestScript.cpp  TestScript.h  common.cpp  common.h  main.cpp
experiment/: CMakeLists.txt
experiment/src/: main.cpp
lib/: CMakeLists.txt
lib/src/cpe/core/: Exception.cpp  Exception.h  ISerializable.cpp  ISerializable.h  terminal.cpp  (+1 more)
lib/src/platform/: winapi.h
task/Task20/: CMakeLists.txt
task/Task20/src/: TransAgency.cpp  main.cpp
task/Task8/: CMakeLists.txt
test/: CMakeLists.txt  MainController.cpp  MainView.cpp  MainView.h  Test.txt  TestProcessor.cpp  TestProcessor.h  TestScript.cpp  TestScript.h  common.cpp  common.h  main.cpp
test/processor/: TestProcessor.cpp  TestProcessor.h
test/script/: TestScript.cpp  TestScript.h
test/src/: TestController.cpp  TestController.h  TestScript.cpp  TestScript.h  TestView.cpp  TestView.h  common.cpp  common.h  main.cpp  main.h
test/src/controller/: MainController.cpp  MainController.h
test/src/processor/: TestProcessor.cpp  TestProcessor.h
test/src/script/: TestScript.cpp
test/src/view/: MainView.cpp  MainView.h
(+322 files in other folders)
